--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 ash = "0.37.3"
 ash-window = "0.12.0"
+colored = "2.0.0"
 raw-window-handle = "0.5.2"
 winit = "0.28.6"
