--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ vlayers = []
 ash = "0.37.3"
 ash-window = "0.12.0"
 colored = "2.0.0"
+nalgebra = "0.32.3"
 raw-window-handle = "0.5.2"
 winit = "0.28.6"
