--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ edition = "2021"
 vlayers = []
 
 [dependencies]
-ash = "0.37.3"
-ash-window = "0.12.0"
+ash = "0.38"
+ash-window = "0.13.0"
 colored = "2.0.0"
 cgmath = "0.18.0"
-raw-window-handle = "0.5.2"
-winit = "0.28.6"
+raw-window-handle = "0.6.1"
+winit = "0.30.0"
+image = "0.25.1"
